clean up add_ind out of the workflow

--- a/Metadata Management/To Long Form & Georeference.ipynb
+++ b/Metadata Management/To Long Form & Georeference.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -228,13 +228,11 @@
       "text/plain": [
        "{'%20soc_023_fragile_states_index': {'error': '* Problem fetching %20soc_023_fragile_states_index from Carto server *'},\n",
        " 'cit_022_road_traffic_deaths_by_country': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['country'],\n",
        "   'prefixes': ['estimated_number_of_road_traffic_deaths']}},\n",
        " 'cit_025_urban_population': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -243,7 +241,6 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'cit_028_percent_urban_slums_edit': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -252,25 +249,20 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'cit_029_municipal_waste': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['_2012_2015_avg', 'country'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'cli_007_greenhouse_gas_emissions_projections': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'cli_008_greenhouse_gas_emissions_country_sector': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'cli_029_vulnerability_to_cc': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['country'],\n",
        "   'prefixes': ['gain', 'readiness', 'vulnerability']}},\n",
        " 'com_006_national_current_accounts_edit': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -279,13 +271,10 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'com_007_fdi_index': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'com_009_1_material_flows_main': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'com_010_gdp_ppp_usd': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -294,31 +283,25 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'com_015_recycling_rates': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['_2012_2015_avg', 'country'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'com_019_ecological_footprint_edit': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'com_028_effect_of_ag_prices_on_commodity_prices': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'country_aliases': {'config_options': {'country_code': 'iso',\n",
        "   'country_name': 'alias',\n",
        "   'id_cols': ['']}},\n",
        " 'ene_012_electricity_access': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code', 'country_name'],\n",
        "   'prefixes': ['urban', 'rural', 'total']}},\n",
        " 'ene_017_energy_facility_emissions_edit': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'ene_021_se4all_country_indicators': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -327,40 +310,31 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'ene_022_se4all_tracking_goals': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
-       "   'prefixes': ['--']}},\n",
+       "   'prefixes': ['yr']}},\n",
        " 'ene_028_access_clean_cooking_fuels': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code', 'country_name', 'series_code', 'series_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'foo_006_effects_climate_change_food_production': {'config_options': {'_incl': False,\n",
-       "   'add_ind': True,\n",
        "   'prefixes': ['--']}},\n",
        " 'foo_015_global_hunger_index': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['country'],\n",
        "   'prefixes': ['ghi']}},\n",
        " 'foo_019_child_malnutrition_edit': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'foo_040_fisheries_vuln_climat': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country_territory',\n",
        "   'id_cols': ['country_territory', 'field_8'],\n",
        "   'prefixes': ['rcp26', 'rcp45', 'rcp85']}},\n",
        " 'foo_041_agricultural_emissions': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'foo_042_agricultural_production_value': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'foo_43_agriculture_value_added': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -369,7 +343,6 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'for_021_certified_forest_edit': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'geometry': {'config_options': {'country_code': 'iso_a3',\n",
        "   'country_name': 'name',\n",
@@ -378,16 +351,13 @@
        "   'country_name': 'country',\n",
        "   'id_cols': ['country']}},\n",
        " 'soc_005_political_rights_civil_liberties_index': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'soc_006_multidimensional_poverty_index': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['country', 'latest'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'soc_008_gdp_per_capita_edit': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code',\n",
@@ -396,7 +366,6 @@
        "    'indicator_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'soc_015_adult_literacy_rate': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['indicator_code',\n",
@@ -405,7 +374,6 @@
        "    'country_name'],\n",
        "   'prefixes': ['yr', 'male', 'female']}},\n",
        " 'soc_020_gini': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['indicator_code',\n",
@@ -414,13 +382,11 @@
        "    'country_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'soc_025_gender_inequality_index': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['country'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'soc_029_worldwide_governance_indicators': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': 'wbcode',\n",
        "   'country_name': 'country_territory',\n",
        "   'id_cols': ['country_territory', 'wbcode'],\n",
@@ -431,10 +397,8 @@
        "    'rule_of_law',\n",
        "    'voice_accountability']}},\n",
        " 'soc_035_land_deals': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'soc_036_life_expectancy_at_birth': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['indicator_code',\n",
@@ -443,29 +407,25 @@
        "    'country_name'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'soc_039_out_of_school_rate_edit': {'config_options': {'_incl': True,\n",
-       "   'add_ind': False,\n",
        "   'country_code': False,\n",
        "   'country_name': 'country',\n",
        "   'id_cols': ['country'],\n",
        "   'prefixes': ['yr']}},\n",
        " 'soc_040_improved_sanitation': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code', 'country_name'],\n",
        "   'prefixes': ['rural', 'urban', 'total']}},\n",
        " 'soc_062_internal_displacement_conflict_and_natural_disaster': {'config_options': {'_incl': False,\n",
-       "   'add_ind': False,\n",
        "   'prefixes': ['already long']}},\n",
        " 'wat_005_improved_water_access': {'config_options': {'_incl': True,\n",
-       "   'add_ind': True,\n",
        "   'country_code': 'country_code',\n",
        "   'country_name': 'country_name',\n",
        "   'id_cols': ['country_code', 'country_name'],\n",
        "   'prefixes': ['urban', 'rural', 'total']}}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,15 +1191,6 @@
     "    table_info[name]['config_options']['prefixes'] = [pfx.strip() for pfx in prefixes.split(',')]\n",
     "    '''\n",
     "\n",
-    "    ## To determine whether value column prefixes should be added as a new column, uncomment\n",
-    "    '''\n",
-    "    add_indicator_column = input('Add prefix as indicator? type anything for True, leave blank for False')\n",
-    "    if add_indicator_column != '':\n",
-    "        table_info[name]['config_options']['add_ind'] = True\n",
-    "    else:\n",
-    "        table_info[name]['config_options']['add_ind'] = False\n",
-    "    '''\n",
-    "\n",
     "    ## To determine whether the value column names have a _ after the prefix, uncomment\n",
     "    '''\n",
     "    _included = input('Is there a _ after the prefix? type anything for True, leave blank for False')\n",
@@ -1789,7 +1740,6 @@
     "    prefixes = table_info[name]['config_options'].get('prefixes', [])\n",
     "    id_cols = table_info[name]['config_options'].get('id_cols', [])\n",
     "    use_ = table_info[name]['config_options'].get('_incl', False)\n",
-    "    add_ind = table_info[name]['config_options'].get('add_ind', False)\n",
     "\n",
     "    logging.info('initial shape: ' + str(info['data'].shape))\n",
     "    logging.info('')\n",
