--- a/Metadata Management/To Long Form & Georeference.ipynb
+++ b/Metadata Management/To Long Form & Georeference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -62,20 +62,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): wri-rw.carto.com\n",
-      "DEBUG:urllib3.connectionpool:https://wri-rw.carto.com:443 \"GET /api/v2/sql?q=SHOW+search_path&client=cartoframes_0.3.0b5&api_key=65efbcc00e9591f334fcad66b3d9515228a7deef HTTP/1.1\" 200 152\n",
-      "DEBUG:urllib3.connectionpool:Starting new HTTPS connection (1): api.resourcewatch.org\n",
-      "DEBUG:urllib3.connectionpool:https://api.resourcewatch.org:443 \"GET /v1/dataset?sort=slug,-provider,userId&status=saved&includes=metadata,vocabulary,widget,layer&application=rw&page%5Bsize%5D=1000 HTTP/1.1\" 200 3824359\n",
-      "INFO:root:Number of Carto datasets: 219\n"
+     "ename": "NameError",
+     "evalue": "name 'aws_access_key_id' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-4c1713d47d79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m s3_client = boto3.client(\n\u001b[1;32m     17\u001b[0m     \u001b[0;34m's3'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0maws_access_key_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maws_access_key_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0maws_secret_access_key\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maws_secret_access_key\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'aws_access_key_id' is not defined"
      ]
     }
    ],
@@ -12221,6 +12221,29 @@
     "    for iso in tables['country_aliases']['data']['iso']:\n",
     "        if alias.lower().replace(' ', '') in name.lower().replace(' ', ''):\n",
     "            print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'write_to_S3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4911d48f7937>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwrite_to_S3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'country_aliases'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ms3_bucket\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ms3_folder\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'country_aliases'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'write_to_S3' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "write_to_S3(tables['country_aliases']['data'],s3_bucket,s3_folder+'country_aliases')"
    ]
   },
   {
