Separating gore tool

--- a/Metadata Management/To Long Form & Georeference.ipynb
+++ b/Metadata Management/To Long Form & Georeference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -56,6 +56,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['cit.022', 'cit.025', 'cit.028', 'cit.029', 'cli.007', 'cli.008', 'com.006', 'com.007', 'com.009', 'com.010', 'com.015', 'com.019', 'com.028', 'ene.012', 'ene.021', 'ene.022', 'ene.028', 'foo.006', 'foo.015', 'foo.019', 'foo.040', 'foo.041', 'foo.042', 'foo.043', 'for.021', 'soc.004', 'cit.017', 'soc.005', 'soc.006', 'soc.008', 'soc.015', 'soc.020', 'soc.023', 'soc.029', 'soc.035', 'soc.036', 'soc.039', 'soc.040', 'soc.062', 'wat.005', 'cli.029'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\"cit.022\":\"6b670396-c52c-430c-b5bb-20693da03b60\",\"cit.025\":\"d38d0d5c-31b1-47f4-9d2e-d8fba4c7d083\",\"cit.028\":\"35ce2b98-adbb-4873-b334-d7b1cc542de7\",\"cit.029\":\"10337db6-8321-445e-a60b-28fc1e114f29\",\"cli.007\":\"3d2ce960-abda-4c9c-bd29-1929e9ca24c9\",\"cli.008\":\"3a46f6b4-0eec-49d4-bbfc-e2e8f64e6117\",\"com.006\":\"2e31a1f3-576b-46b4-84f0-3f0cc399f887\",\"com.007\":\"fe311144-8c0e-4440-b068-6efd057e0f6a\",\"com.009\":\"c61c364b-1d68-4dd9-ae3d-76c2a0022280\",\"com.010\":\"52c55378-0484-48c3-92fc-3ee94d21c716\",\"com.015\":\"c18a38cd-94ff-48cd-818f-6ffb05992abb\",\"com.019\":\"5e3a3a9f-7380-47c0-ad84-2c193861e106\",\"com.028\":\"62c988a7-1e4d-418e-87bf-a743e24209e8\",\"ene.012\":\"d446a52e-c4c1-4e74-ae30-3204620a0365\",\"ene.021\":\"2c092793-aa3a-4520-959c-ad48165dcae4\",\"ene.022\":\"d639909f-bcf3-4875-b8c3-35f030b68ed3\",\"ene.028\":\"c665f519-eef9-4f67-a8bf-7e3e6dc8bfcd\",\"foo.006\":\"2034a766-6e8a-416d-b8ab-9b7b3e3abb15\",\"foo.015\":\"4338471d-881a-475f-8bd9-60c4d48b8e12\",\"foo.019\":\"8bc79a36-d77e-4ee3-b9bc-c77146cfc503\",\"foo.040\":\"91ff1359-6680-49bc-8002-20256e999993\",\"foo.041\":\"ccfb322a-20aa-4132-b58b-0f76acec8f5a\",\"foo.042\":\"7a551dd8-b59c-4f59-9d50-c92cb61c5799\",\"foo.043\":\"95b013a3-389a-4367-83b7-c9d68c28c406\",\"for.021\":\"05b7c688-09ba-4f33-90ea-185a1039df43\",\"soc.004\":\"bea122ce-1e4b-465d-8b7b-fa11aadd20f7\",\"cit.017\":\"0303127a-70b0-4164-9251-d8162615d058\",\"soc.005\":\"a7067e9f-fe40-4338-85da-13a6071c76fe\",\"soc.006\":\"a89c95c7-0b82-4162-b9d8-cc0205e9f7ec\",\"soc.008\":\"00abb46f-34e2-4bf7-be30-1fb0b1de022f\",\"soc.015\":\"e8f53f73-d77c-485a-a2a6-1c47ea4aead9\",\"soc.020\":\"f8d3e79c-c3d0-4f9a-9b68-9c5ad1f025e4\",\"soc.023\":\"d3a6b89f-cf5c-40cf-b2b3-ac1c8315c648\",\"soc.029\":\"7793f46c-a48a-466f-a8ce-ca1a87b7aeed\",\"soc.035\":\"e7780d53-ad80-45bd-a271-79615ee97a37\",\"soc.036\":\"8671f536-1979-4b6f-a147-70152fcb44ed\",\"soc.039\":\"b37048be-9b23-4458-a047-888956c69aa1\",\"soc.040\":\"37d04efc-0ab2-4499-a891-54dca1013c74\",\"soc.062\":\"5e69cfac-1f68-4864-a19a-3c1bdb180100\",\"wat.005\":\"1b97e47e-ca18-4e50-9aae-a2853acca3f0\",\"cli.029\":\"fa6443ff-eb95-4d0f-84d2-f0c91682efdf\"}.keys()\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -64,11 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-d623ccfe2f10>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-d623ccfe2f10>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    aws_access_key_id = #os.environ.get('aws_access_key_id')\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
