updating longform / georef tools

--- a/Metadata Management/Autogen Layers.ipynb
+++ b/Metadata Management/Autogen Layers.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -372,6 +372,22 @@
     "data = res.json()[\"data\"]\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Uploading a layer to a data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
