Mostly Metadata Management, some nlp_results grouping

--- a/Metadata Management/Autogen Layers.ipynb
+++ b/Metadata Management/Autogen Layers.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# NOTE: This notebook has some dirty functions w/ non-injected variables referenced in the function call. Namely w/ carto_data... undefined in this notebook?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Import libraries"
    ]
   },
@@ -31,6 +38,71 @@
     "\n",
     "from functools import reduce\n",
     "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read data from API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Import from RW API to solve this\n",
+    "# Base URL for getting dataset metadata from RW API\n",
+    "url = \"https://api.resourcewatch.org/v1/dataset?sort=slug,-provider,userId&status=saved&includes=metadata,vocabulary,widget,layer\"\n",
+    "\n",
+    "# page[size] tells the API the maximum number of results to send back\n",
+    "# There are currently between 200 and 300 datasets on the RW API\n",
+    "payload = { \"application\":\"rw\", \"page[size]\": 1000}\n",
+    "\n",
+    "# Request all datasets, and extract the data from the response\n",
+    "res = req.get(url, params=payload)\n",
+    "data = res.json()[\"data\"]\n",
+    "\n",
+    "### Convert the json object returned by the API into a pandas DataFrame\n",
+    "# Another option: https://pandas.pydata.org/pandas-docs/stable/generated/pandas.io.json.json_normalize.html\n",
+    "datasets_on_api = {}\n",
+    "for ix, dset in enumerate(data):\n",
+    "    atts = dset[\"attributes\"]\n",
+    "    metadata = atts[\"metadata\"]\n",
+    "    layers = atts[\"layer\"]\n",
+    "    widgets = atts[\"widget\"]\n",
+    "    tags = atts[\"vocabulary\"]\n",
+    "    datasets_on_api[dset[\"id\"]] = {\n",
+    "        \"name\":atts[\"name\"],\n",
+    "        \"table_name\":atts[\"tableName\"],\n",
+    "        \"provider\":atts[\"provider\"],\n",
+    "        \"date_updated\":atts[\"updatedAt\"],\n",
+    "        \"num_metadata\":len(metadata),\n",
+    "        \"metadata\": metadata,\n",
+    "        \"num_layers\":len(layers),\n",
+    "        \"layers\": layers,\n",
+    "        \"num_widgets\":len(widgets),\n",
+    "        \"widgets\": widgets,\n",
+    "        \"num_tags\":len(tags),\n",
+    "        \"tags\":tags\n",
+    "    }\n",
+    "\n",
+    "# Create the DataFrame, name the index, and sort by date_updated\n",
+    "# More recently updated datasets at the top\n",
+    "current_datasets_on_api = pd.DataFrame.from_dict(datasets_on_api, orient='index')\n",
+    "current_datasets_on_api.index.rename(\"Dataset\", inplace=True)\n",
+    "current_datasets_on_api.sort_values(by=[\"date_updated\"], inplace=True, ascending = False)\n",
+    "\n",
+    "# Select all Carto datasets on the API:\n",
+    "provider = \"cartodb\"\n",
+    "carto_ids = (current_datasets_on_api[\"provider\"]==provider)\n",
+    "carto_data = current_datasets_on_api.loc[carto_ids]\n",
+    "\n",
+    "logging.info(\"Number of Carto datasets: {}\".format(carto_data.shape[0]))"
    ]
   },
   {
