--- a/Metadata Management/Longforming Tool.ipynb
+++ b/Metadata Management/Longforming Tool.ipynb
@@ -66,8 +66,8 @@
    },
    "outputs": [],
    "source": [
-    "CARTO_USER = 'wri-rw'\n",
-    "CARTO_KEY = '' #os.environ.get('CARTO_KEY', None)\n",
+    "CARTO_USER = 'wri-rw'#os.environ.get('CARTO_USER')\n",
+    "CARTO_KEY = ''#os.environ.get('CARTO_KEY')\n",
     "\n",
     "cc = cartoframes.CartoContext(base_url='https://{}.carto.com/'.format(CARTO_USER),\n",
     "                              api_key=CARTO_KEY)"
@@ -266,7 +266,7 @@
    "source": [
     "# Use known prefixes to reformat tables\n",
     "def pick_value_col(col, pfx):\n",
-    "    if pfx in col:\n",
+    "    if (pfx in col) and (len(col) == len(pfx) + 4):\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -291,31 +291,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "for wri_id, info in data_tables.items():\n",
     "    name = info['name']\n",
     "    wide = info['wide']\n",
-    "    print(wide.head())\n",
+    "    #logging.debug(wide.head())\n",
     "    \n",
     "    prefixes = longform_config.loc[wri_id, 'prefixes'].split(';')\n",
     "    id_cols = longform_config.loc[wri_id, 'id_cols'].split(';')\n",
     "    parse_date = True if longform_config.loc[wri_id, 'parse_date'] == True else False\n",
-    "    print(\"Parsing date? {}\".format(parse_date))\n",
+    "    logging.debug(\"Parsing date? {}\".format(parse_date))\n",
     "    \n",
     "    logging.info('initial shape: ' + str(wide.shape))\n",
     "    \n",
     "    df = pd.DataFrame(columns = id_cols + ['variable'])\n",
     "    \n",
     "    for pfx in prefixes:\n",
-    "        logging.debug('working on pfx ' + pfx)\n",
+    "        logging.info('working on pfx ' + pfx)\n",
     "        \n",
     "        value_cols = [col for col in wide.columns if pick_value_col(col, pfx)]\n",
-    "        logging.debug('columns pulled: ' + str(value_cols))\n",
+    "        logging.info('columns pulled: ' + str(value_cols))\n",
     "\n",
     "        _df = pd.melt(wide, id_vars=id_cols, value_vars=value_cols)\n",
+    "        logging.info(_df['variable'])\n",
+    "        d = _df['variable']\n",
     "        _df['variable'] = [prepare_date(date, pfx, parse_date) for date in _df['variable']]\n",
     "\n",
     "        col_names = [pfx+'_data' if col=='value' else col for col in _df.columns]\n",
@@ -341,8 +343,9 @@
    },
    "outputs": [],
    "source": [
-    "data_tables['soc.074']['wide']\n",
-    "data_tables['soc.074']['long']"
+    "#data_tables['ene.029']['long']['yr__data'] = list(map(cast_as_num, data_tables['ene.029']['long']['yr__data'] ))\n",
+    "#data_tables['cit.020'].keys()\n",
+    "data_tables.keys()"
    ]
   },
   {
