post-launch update

--- a/Metadata Management/Migrate a Dataset.ipynb
+++ b/Metadata Management/Migrate a Dataset.ipynb
@@ -346,10 +346,10 @@
     "    layer['attributes']['application'] = ['rw']    \n",
     "    layer['attributes']['layerConfig']['body']['layers'][0]['options']['cartocss'] = layer['attributes']['layerConfig']['body']['layers'][0]['options']['cartocss'].replace(old_table_name, new_table_name)\n",
     "    layer['attributes']['layerConfig']['body']['layers'][0]['options']['sql'] = '' + \\\n",
-    "    'SELECT geo.the_geom_webmercator, geo.cartodb_id, d.isoalpha3, d.flow, d.mfa13, d.time, d.sum_value FROM ' + \\\n",
-    "    '(SELECT isoalpha3, flow, mfa13, time, SUM(value) as sum_value ' + \\\n",
-    "    'FROM com_009_flowmfa WHERE flow ILIKE \"DMC\" AND mfa13 ILIKE \"GBF\" AND time = 2017 ' + \\\n",
-    "    'GROUP BY mfa13, isoalpha3, flow, time) d ' + \\\n",
+    "    'SELECT geo.the_geom_webmercator, geo.cartodb_id, d.isoalpha3, d.flow, d.mfa4, d.time, d.sum_value FROM ' + \\\n",
+    "    '(SELECT isoalpha3, flow, mfa4, time, SUM(value) as sum_value ' + \\\n",
+    "    'FROM com_009_flowmfa WHERE flow ILIKE \"DMC\" AND mfa4 ILIKE \"BM\" AND time = 2017 ' + \\\n",
+    "    'GROUP BY mfa4, isoalpha3, flow, time) d ' + \\\n",
     "    'LEFT OUTER JOIN \"wri-rw\".wri_countries_a geo ' + \\\n",
     "    'ON geo.iso_a3 = d.isoalpha3' + \\\n",
     "    'ORDER BY d.isoalpha3'\n",
