moving towards cleanliness...wip

--- a/Notebooks for Exploring Specific Datasets/Comparing GHG GDP Compass of Divergence w Country Level Datasets_clean.ipynb
+++ b/Notebooks for Exploring Specific Datasets/Comparing GHG GDP Compass of Divergence w Country Level Datasets_clean.ipynb
@@ -22,6 +22,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+  ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.environ"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
