--- a/API Educational Materials/Ex 6 - Running Regressions with Resource Watch National Level Data.ipynb
+++ b/API Educational Materials/Ex 6 - Running Regressions with Resource Watch National Level Data.ipynb
@@ -166,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find which data sets cover the right years and are \"simple\""
+    "## Find which data sets cover the right years"
    ]
   },
   {
