add snippet to change aspects of code during a migration, such as table names or column names

--- a/Metadata Management/Migrate a Dataset.ipynb
+++ b/Metadata Management/Migrate a Dataset.ipynb
@@ -29,16 +29,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from configparser import ConfigParser\n",
-    "config = ConfigParser()\n",
-    "config.read(\"/Users/nathansuberi/Desktop/WRI_Programming/cred/.env\")\n",
-    "api_token = config.get(\"auth\", \"rw_api_token\")\n",
-    "\n",
-    "AUTH_TOKEN = api_token # <Insert Auth Token Here>"
+    "AUTH_TOKEN = os.environ.get('rw_api_token')"
    ]
   },
   {
@@ -57,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "rw_id = 'c61c364b-1d68-4dd9-ae3d-76c2a0022280'\n",
+    "rw_id = '082e2262-c58e-46a0-b6b7-56083cfcbd34'\n",
     "\n",
     "# Base URL for getting dataset metadata from RW API\n",
     "url = \"https://api.resourcewatch.org/v1/dataset/{rw_id}?sort=slug,-provider,userId&status=saved&includes=metadata,vocabulary,widget,layer\"\n",
@@ -126,9 +121,9 @@
     "ds_specs = {\n",
     "    \"connectorType\":\"rest\",\n",
     "    \"provider\":\"cartodb\",\n",
-    "    \"connectorUrl\":\"https://wri-rw.carto.com/tables/com_009_flowmfa\",\n",
+    "    \"connectorUrl\":\"https://wri-rw.carto.com/tables/com_009_flowmfa_autoupdate\",\n",
     "    \"application\":[\"rw\"],\n",
-    "    \"name\":\"Material Extraction, Trade, and Use\"\n",
+    "    \"name\":\"Material Extraction, Trade, and Use 3\"\n",
     "}\n",
     "\n",
     "create_res = req.request(\"POST\", \n",
@@ -178,6 +173,61 @@
     "    res = req.request(\"POST\", _url, data=json.dumps(widget['attributes']), headers = headers)\n",
     "    logging.info(res.text)   \n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Loop over all layers\n",
+    "for ds in old_ds_info.loc['layers'].values[0]:\n",
+    "    # Fix column names in interactionConfig\n",
+    "    for col in ds['attributes']['interactionConfig']['output']:\n",
+    "        if col['column'] == 'value':\n",
+    "            col['column'] = 'amount'\n",
+    "        if col['column'] == 'time':\n",
+    "            col['column'] = 'year'\n",
+    "            \n",
+    "    # Fix cartocs to refer to amount\n",
+    "    ds['attributes']['layerConfig']['body']['layers'][0]['options']['cartocss'] = ds['attributes']['layerConfig']['body']['layers'][0]['options']['cartocss'].replace('value', 'amount')\n",
+    "            \n",
+    "    # Fix sql\n",
+    "    ds['attributes']['layerConfig']['body']['layers'][0]['options']['sql'] = ds['attributes']['layerConfig']['body']['layers'][0]['options']['sql'].replace('value', 'amount').replace('time', 'year').replace('com_009_flowmfa', 'com_009_flowmfa_autoupdate')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#old_ds_info.loc['layers'].values[0][0]['attributes']['layerConfig']['body']['layers'][0]['options']['sql']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for layer in old_ds_info.loc['layers'].values[0]:\n",
+    "    layer['attributes']['application'] = ['rw']\n",
+    "    layer['attributes']['language'] = 'en'\n",
+    "    _url = url.format(rw_id = new_rw_id, endpoint = 'layer')\n",
+    "    res = req.request(\"POST\", _url, data=json.dumps(layer['attributes']), headers = headers)\n",
+    "    logging.info(res.text)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "new_rw_id"
    ]
   },
   {
